--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>App Simples</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            text-align: center;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-        }
-        #resultado {
-            margin-top: 20px;
-            padding: 15px;
-            background: #f0f0f0;
-            border-radius: 5px;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aplicação</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Meu App Simples</h1>
-    
-    <button onclick="cumprimentar()">Dizer Olá</button>
-    
-    <div id="resultado"></div>
+    <div class="dashboard-container">
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <i class="fa-solid fa-cloud-moon logo-icon"></i>
+                <span class="logo-text">Aplicação</span>
+            </div>
+            <nav class="sidebar-nav">
+                <ul>
+                    <li class="selected"><a href="#home" data-page="home"><i class="fas fa-home"></i>Home</a></li>
+                    <li><a href="#reports" data-page="reports"><i class="fas fa-file-alt"></i>Relatórios</a></li>
+                    <li><a href="#registro" data-page="registro"><i class="fas fa-user-plus"></i>Registro</a></li>
+                    <li><a href="#settings" data-page="settings"><i class="fas fa-cog"></i>Configurações</a></li>
+                </ul>
+            </nav>
+            <div class="sidebar-bottom">
+                <ul>
+                    <li><a href="#information"><i class="fas fa-info-circle"></i>Informação</a></li>
+                    <li><a href="#help"><i class="fas fa-question-circle"></i>Ajuda</a></li>
+                </ul>
+            </div>
+        </aside>
 
-    <script>
-        async function cumprimentar() {
-            try {
-                const response = await fetch('http://localhost:5000/');
-                const data = await response.json();
-                document.getElementById('resultado').innerHTML = 
-                    `<strong>${data.mensagem}</strong><br>Hora: ${data.hora}`;
-            } catch (error) {
-                document.getElementById('resultado').innerHTML = 'Erro ao conectar com o Python';
-            }
-        }
-    </script>
+        <main class="main-content">
+            <header class="main-header">
+                <div class="header-left">
+                    <span class="page-title">Página Principal</span>
+                </div>
+                <div class="header-right">
+                    <button id="theme-toggle" class="theme-toggle-button"> 
+                        <i class="fas fa-sun"></i> 
+                    </button>
+                </div>
+            </header>
+
+            <!-- Container onde as páginas serão carregadas -->
+            <div id="page-container"></div>
+        </main>
+    </div>
+
+    <script src="script.js"></script>
+    <script src="light-dark-mode.js"></script>
 </body>
 </html>
